--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@typescript-eslint/visitor-keys": "^5.21.0",
+    "eslint": "^8.14.0",
+    "microcms-js-sdk": "^2.0.0",
+    "moment": "^2.29.3",
     "next": "12.1.5",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-moment": "^1.1.2",
+    "sass": "^1.51.0"
   },
   "devDependencies": {
-    "eslint": "8.14.0",
     "eslint-config-next": "12.1.5"
   }
 }
